<resources>
    <string name="all_error_emailinvalid">Email sai định dạng!</string>
    <string name="all_error_passwordinvalid">Mật khẩu quá ngắn!</string>
    <string name="all_error_emailempty">Vui lòng nhập Email!</string>
    <string name="all_error_passwordempty">Vui lòng nhập mật khẩu!</string>
    <string name="all_error_confirmpasswordempty">Vui lòng nhập lại mật khẩu!</string>
    <string name="all_error_confirmpasswordinvalid">Không trùng khớp!</string>
    <string name="all_email_hint">Email</string>
    <string name="all_email_announcement">Địa chỉ email không tồn tại!</string>
    <string name="all_password_hint">Mật khẩu</string>
    <string name="all_confirm_password_hint">Nhập lại mật khẩu</string>
    <string name="all_password_announcement">Mật khẩu không chính xác!</string>
    <string name="all_email_example">dttai1800732@student.ctuet.edu.vn</string>
    <string name="all_maao_hint">Mã ao</string>
    <string name="all_tenao_hint">Tên ao</string>
    <string name="all_mota_hint">Mô tả ao</string>
    <string name="all_ngaytao_text">Ngày tạo: </string>
    <string name="all_message_confirmresetpassword">Bạn có muốn đặt lại mật khẩu!</string>
    <string name="all_button_agree_text">ĐỒNG Ý</string>
    <string name="all_button_cancel_text">ĐÓNG</string>
    <string name="all_toast_sentpasswordresetemail">Vui lòng kiểm tra hộp thư của email!</string>
    <string name="all_toast_invaled">Thông tin không hợp lệ!</string>
    <string name="all_toast_lackofinformation">Vui lòng nhập đầy đủ thông tin!</string>
    <string name="all_title_dialogconfirmdelete">Xác nhận xóa</string>
    <string name="app_name">TOMTEP</string>
    <string name="signin_image_description">Logo app</string>
    <string name="signin_button_signin_text">Đăng nhập</string>
    <string name="signin_textview_reset_password">Đặt lại mật khẩu?</string>
    <string name="signin_textview_notaccount">Bạn chưa có tài khoản?</string>
    <string name="signin_textview_signup">Đăng ký</string>
    <string name="signup_button_signup_text">Đăng ký</string>
    <string name="signup_textview_hadaccount">Bạn đã có tài khoản?</string>
    <string name="signup_textview_signin">Đăng nhập</string>
    <string name="signup_textview_title">ĐĂNG KÝ</string>
    <string name="signup_toast_successful">Tạo tài khoản thành công!</string>
    <string name="signup_title_dialogcomfirmresetpassword">Email đã tồn tại.</string>
    <string name="resetpassword_button_reset_text">Đặt lại mật khẩu</string>
    <string name="resetpassword_textview_note">\tChú ý!\nHãy nhập địa chỉ Email tài khoản của bạn và nhấn nút ĐẶT LẠI MẬT KHẨU.\nĐường dẫn đặt lại mật khẩu sẽ được gửi đến địa chỉ Email được cung cấp ở trên.\nHãy mở hộp thư đến của Email trên và truy cập vào đường dẫn trong hộp thư để đặt lại mật khẩu.\nSau đó hãy quay lại ứng dụng này và Đăng nhập với mật khẩu mới.</string>
    <string name="resetpassword_textview_title">ĐẶT LẠI MẬT KHẨU</string>
    <string name="resetpassword_button_back_text">Quay lại Đăng nhập</string>
    <string name="resetpassword_toast_sendemailcomplete">Đường dẫn đặt lại mật khẩu mới đã được gửi đến địa chỉ Email trên,vui lòng kiểm tra hộp thư đến của Emai!</string>
    <string name="all_toast_emailinexist">Địa chỉ email không tồn tại!</string>
    <string name="signin_toast_fail">Email hoặc mật khẩu không chính xác!</string>
    <string name="main_navigation_drawer_open">Open navigation drawer</string>
    <string name="main_navigation_drawer_close">Close navigation drawer</string>
    <string name="resetpassword_toast_emailinexist">Email không tồn tại!</string>
    <string name="changepassword_textview_title">ĐỔI MẬT KHẨU</string>
    <string name="changepassword_button_change_text">ĐỔI MẬT KHẨU MỚI</string>
    <string name="changepassword_toast_successful">Cập nhật mật khẩu thành công!</string>
    <string name="changepassword_toast_fail">Cập nhật mật khẩu thất bại!</string>
    <string name="main_message_confirmdeleteaccount">"Bạn chắc chắn rằng muốn xóa tài khoản "</string>
    <string name="main_toast_deleteaccountsuccess">Tài khoản đã được xóa thành công!</string>
    <string name="main_toast_deleteaccountfail">Xóa tài khoản thất bại!</string>
    <string name="navigation_menu_deleteaccount">Xóa tài khoản</string>
    <string name="navigation_menu_changepassword">Đổi mật khẩu</string>
    <string name="navigation_menu_signuot">Đăng xuất</string>
    <string name="bnavigation_menu_lake">Ao</string>
    <string name="bnavigation_menu_diet">Chế độ ăn</string>
    <string name="bnavigation_menu_product">Sản phẩm</string>
    <string name="bnavigation_menu_statistics">Thống kê</string>
    <string name="expandlake_tab_producthistory">Dùng Sản Phẩm</string>
    <string name="expandlake_tab_otherusehistory">Chi Dùng Khác</string>
    <string name="expandlake_tab_environmenthistory">Môi Trường</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="laketoolbar_menu_new">Ao mới</string>
    <string name="producttoolbar_menu_new">Sản phẩm mới</string>
    <string name="itemlake_imagechange_description">Icon change lake</string>
    <string name="dialognewlake_title">THÊM AO MỚI</string>
    <string name="all_button_add_text">Thêm</string>
    <string name="all_title_confirmaction">Xác nhận thao tác</string>
    <string name="all_message_confirmactioncancel">Hãy chắc rằng mọi thông tin mà bạn đã nhập sẽ bị hủy bỏ.</string>
    <string name="newlake_toast_canceled">Bạn đã hủy bỏ thao tác Thêm ao mới</string>
    <string name="newlake_toast_successful">Thêm ao thành công.</string>
    <string name="lakefragment_message_confirmdelete">"Đồng ý xóa "</string>
    <string name="lakefragment_toast_deletesucces">Xóa ao nuôi thành công!</string>
    <string name="dialogupdatelake_title">CẬP NHẬT THÔNG TIN AO</string>
    <string name="all_button_update_text">Cập nhật</string>
    <string name="all_toast_updateinfomationsuccess">Cập nhật thông tin thành công</string>
    <string name="updatelake_toast_canceled">Bạn đã hủy thao tác Cập nhật thông tin ao</string>
    <string name="dialogupdatediet_title">CẬP NHẬT CHẾ ĐỘ ĂN</string>
    <string name="dialogupdatediet_quantity">Khối lượng cho ăn</string>
    <string name="all_button_save_text">Lưu lại</string>
    <string name="all_title_annoucement">Thông báo</string>
    <string name="updatedietdialog_message_notfoundproduct">Bạn chưa có sản phẩm nào trong kho.\nHãy thêm sản phẩm mới vào kho để có thể cập nhật cho Chế độ ăn.</string>
    <string name="itemtime_image_description">Image remove time</string>
    <string name="dialogupdatediet_toast_quantityempty">Vui lòng nhập Khối lượng cho ăn.</string>
    <string name="dialogupdatediet_longtime">Thời gian cho ăn(phút)</string>
    <string name="dialogupdatediet_toast_longtimeempty">Vui lòng nhập Thời gian cho ăn.</string>
    <string name="dialognewproduct_title">THÊM SẢN PHẨM MỚI</string>
    <string name="all_masanpham_hint">Mã sản phẩm</string>
    <string name="all_tensanpham_hint">Tên sản phẩm</string>
    <string name="all_tenncc_hint">Tên nhà cung cấp</string>
    <string name="all_gianhap_hint">Giá nhập(VND),tính trên đơn vị dùng</string>
    <string name="updatedietdialog_message_notfounddonvi">Không tìm thấy Đơn vị tính cho sản phẩm.\nHãy liên hệ : dttai1800732@student.ctuet.edu.vn để đươc hỗ trợ.</string>
    <string name="dialognewproduct_text_donvidung">Chọn vị dùng cho sản phẩm.</string>
    <string name="dialognewproduct_toast_donvidunginvalid">Đơn vị dùng không hợp lệ</string>
    <string name="dialognew_product_toast_importpriceinvalid">Vui lòng nhập giá nhập của sản phẩm hợp lệ</string>
    <string name="newproduct_succesful">Thêm sản phẩm thành công</string>
    <string name="dialogenterquatity_title">NHẬP HÀNG</string>
    <string name="dialogenterquantity_tv_quantity">Số lượng nhập: </string>
    <string name="dialogenterquatity_btn_enter">Nhập vào</string>
    <string name="updatediet_toast_canceled">Bạn đã hủy bỏ thao tác Cập nhật chê độ ăn.</string>
    <string name="enterquantityproduct_toast_succesful">Đã nhập hàng thành công.</string>
    <string name="enterquantityproduct_toast_quantityinvalid">Số lượng nhập không hợp lệ.Vui lòng kiểm tra lại.</string>
    <string name="dialogupdateproduct_title">CẬP NHẬT SẢN PHẨM</string>
    <string name="updateproduct_succesful">Cập nhật sản phẩm thành công.</string>
    <string name="itemproduct_tv_deleted">Sẩn phẩm sẽ được xóa</string>
    <string name="all_message_confirmactiondeleteproduct">\nSẽ bị xóa khỏi danh sách sản phẩm của bạn. </string>
    <string name="productfragmemt_toast_deletesuccess">Sản phẩm đã được xóa thành công!</string>
    <string name="dialogupdateimporthistory_title">CẬP NHẬT LỊCH SỬ NHẬP HÀNG</string>
    <string name="all_ngaycapnhat_text">Ngày cập nhật</string>
    <string name="updateimporthistory_toast_canceled">Bạn đã hủy thao tác cập nhật lịch sử nhập hàng.</string>
    <string name="updateimporthistory_toast_succesful">Cập nhật lịch sử thành công</string>
    <string name="itemimporthistory_tv_deleted">Lịch sử nhập hàng sẽ được xóa</string>
    <string name="expandproduct_toast_deletesuccess">Đã xóa lịch sử nhập hàng thành công</string>
    <string name="channelname_diet">Thông báo thăm nhá</string>
    <string name="dietfragment_toast_dietinvalid">Vui lòng cập nhật sản phẩm cho chế độ an.</string>
    <string name="dietfagment_notification_titile">Tôm đã ăn xong</string>
    <string name="dietfragment_toast_turnonsuccess">Đã bật cho ăn.</string>
    <string name="dietfragment_toast_turnoffsuccess">Đã tắt cho ăn.</string>
    <string name="dietfragment_result_default">Chưa cập nhật</string>
    <string name="itemeatinghistory_tv_deleted">Lịch sử sẽ bị xóa!</string>
    <string name="all_toast_lackproduct">Sản phẩm hiện không còn đủ số lượng</string>
    <string name="dialogupdateeatinghistory_title">TÌNH TRẠNG TÔM</string>
    <string name="updateeatinghistory_toast_success">Cập nhật thành công</string>
    <string name="dietfragment_toast_nonproduct">Sản phẩm cho ăn không còn tồn tại\nVui lòng cập nhật sản phẩm mới.</string>
    <string name="all_title_dialogconfirm">Xác nhận</string>
    <string name="dietfragment_message_confirm_turnoff">"Kết thúc cho ăn trên ao: "</string>
    <string name="dietfragment_message_confirm_turnon">"Bật cho ăn trên ao: "</string>
    <string name="unit_spinner_title">Chọn đơn vị dùng cho sản phẩm</string>
    <string name="dialognewproduct_toast_unitinvalid">Vui lòng chọn đơn vị dùng hợp lệ</string>
    <string name="expandlake_toolbar_menu_harvest">Thu hoạch ao</string>
    <string name="expandlake_toolbar_menu_delete">Xóa ao</string>
    <string name="producthistoryfragmemt_toast_deletesuccess">Lịch sử sử dụng đã được xóa thành công</string>
    <string name="itemproducthistory_tv_deleted">Lịch sử dùng sản phẩm sẽ được xóa</string>
    <string name="all_message_confirmactiondeleteproducthistory">\nSẽ bị xóa khỏi lịch sử dùng sản phẩm của:\t</string>
    <string name="dialogupdateproducthistory_title">CẬP NHẬT LỊCH SỬ DÙNG SẢN PHẨM</string>
    <string name="all_amount_usingproduct">Lượng sử dụng</string>
    <string name="all_toast_amountvalid">Lượng dùng không hợp lệ</string>
    <string name="dialognewproducthistory_title">DÙNG SẢN PHẨM</string>
    <string name="all_message_notfoundproduct">Không tìm thấy sản phẩm khả dùng.Vui lòng thêm sản phẩm cần dùng vào ứng dụng.</string>
    <string name="insertproducthistory_success">Sử dụng sản phẩm thành công</string>
    <string name="dialognew_otherusehistory_title">THÊM CHI DÙNG KHÁC</string>
    <string name="dialognew_otherusehistory_name_hint">Tên chi dùng</string>
    <string name="dialognew_cost_hint">Số tiền chi</string>
    <string name="dialognew_otherusehistory_description_hint">Mô tả</string>
    <string name="dialognew_otherusehistory_costinvalid">Số tiền chi không hợp lệ</string>
</resources>