<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/pading_10dp"
    android:gravity="center"
    tools:context=".ResetPasswordActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_26sp"
        android:textStyle="bold"
        android:textColor="@color/teal_700"
        android:text="@string/resetpassword_textview_title"/>

    <EditText
        android:id="@+id/resetpassword_edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_30dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/bc_rectangle_white_radius50dp_1dp_black_orange_focused"
        android:padding="@dimen/pading_20dp"
        android:hint="@string/all_email_hint"
        android:autofillHints="emailAddress"
        android:minHeight="@dimen/min_height_48dp"/>

    <Button
        android:id="@+id/resetpassword_btn_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10dp"
        android:background="@drawable/bc_rectangle_teal700_radius50dp_1dp_teal700"
        android:text="@string/resetpassword_button_reset_text"
        android:textColor="@color/white"
        android:textStyle="bold" />
    <TextView
        android:layout_marginTop="@dimen/margin_10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/pading_10dp"
        android:textSize="@dimen/text_size_16sp"
        android:text="@string/resetpassword_textview_note"/>
</LinearLayout>