<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="?dialogPreferredPadding"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="?dialogPreferredPadding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/dialognew_otherusehistory_title"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/dialognew_otherusehistory_edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_30dp"
        android:autofillHints="@null"
        android:background="@drawable/bc_rectangle_white_1dp_black_orange_focused"
        android:hint="@string/dialognew_otherusehistory_name_hint"
        android:inputType="text"
        android:padding="@dimen/pading_10dp" />

    <EditText
        android:id="@+id/dialognew_otherusehistory_edt_cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10dp"
        android:autofillHints="@null"
        android:background="@drawable/bc_rectangle_white_1dp_black_orange_focused"
        android:hint="@string/dialognew_cost_hint"
        android:inputType="numberDecimal"
        android:padding="@dimen/pading_10dp" />

    <EditText
        android:id="@+id/dialognew_otherusehistory_edt_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10dp"
        android:autofillHints="@null"
        android:background="@drawable/bc_rectangle_white_1dp_black_orange_focused"
        android:hint="@string/dialognew_otherusehistory_description_hint"
        android:inputType="text"
        android:padding="@dimen/pading_10dp" />

    <TextView
        android:id="@+id/dialognew_otherusehistory_tv_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10dp"
        android:padding="@dimen/pading_10dp"
        android:textSize="@dimen/text_size_18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialognew_otherusehistory_btn_cancel"
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@color/teal_700"
            android:text="@string/all_button_cancel_text"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/dialognew_otherusehistory_btn_add"
            style="?android:attr/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/pading_10dp"
            android:layout_weight="2"
            android:background="@color/teal_700"
            android:text="@string/all_button_add_text"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>